src/styles/global.css
@import 'tailwindcss';

@custom-variant dark (&:where(.dark, .dark *));

@theme inline {
  --font-sans: var(--font-space-mono), 'Courier New', monospace;
  --font-mono: var(--font-space-mono), 'Courier New', monospace;
}

@layer base {
  body {
    @apply text-[15px];
    letter-spacing: -0.5px;
  }
  a {
    &:hover {
      @apply underline;
    }
  }

  html.dark .astro-code,
  html.dark .astro-code span {
    color: var(--shiki-dark) !important;
    background-color: var(--shiki-dark-bg) !important;
  }
}

@layer components {
  .markdown {
    & h1,
    h2,
    h3,
    h4 {
      @apply uppercase font-bold mt-6 mb-3;
    }

    & h1:first-child,
    h2:first-child,
    h3:first-child,
    h4:first-child {
      @apply mt-0;
    }
    & p {
      @apply my-2;
    }
    & a {
      @apply font-bold underline;
    }

    & pre {
      @apply border-gray-200 dark:border-gray-800 border rounded-md overflow-x-auto relative;
    }

    & pre code {
      @apply block p-2;
    }

    & code:not(pre code) {
      @apply bg-gray-100 dark:bg-gray-800 rounded-md px-1 py-0.5 text-gray-950 dark:text-gray-100;
    }
  }
}

